# Dissertation

./: .gitignore  README.md  pyproject.toml
backend/: README.md
backend/data/: .gitkeep
backend/src/: __init__.py
backend/src/config/: __init__.py  config.json  loader.py  logging.py  schemas.py
backend/src/io/: __init__.py  cdaweb.py  loader.py  parquet.py  paths.py  raw_data.py
backend/src/io/utils/: build_shue_dataset.py  format_time_borders.py  interpolate_omn_dataset.py  parse_delta.py
backend/src/physics/: field_alligned_h.py  shue.py
backend/src/pipelines/: checks.ipynb  copy_load_raw.ipynb  get_data.py  get_h_data.py  load_raw.ipynb  load_raw_datasets.ipynb
backend/src/processing/: __init__.py  availability_intervals.py  distribution.py  filters.py  interpolate.py  intersections.py  prepared_dataset.py  satellite_matrix.py
backend/src/processing/utils/: __init__.py  h_parameter_range.py  intervals_view.py  is_show_intervals.py  plot_interval_settings.py  show_overlaps.py
frontend/: README.md
frontend/data/: .gitkeep
frontend/plot/: availability_periods.py  h_range.py  shue_model.py
papers/: README.md
wiki/: README.md
